Backend: Build - install profiler

--- a/backend/composer.json
+++ b/backend/composer.json
@@ -16,7 +16,9 @@
         "symfony/yaml": "7.0.*"
     },
     "require-dev": {
-        "symfony/maker-bundle": "^1.59"
+        "symfony/maker-bundle": "^1.59",
+        "symfony/stopwatch": "7.0.*",
+        "symfony/web-profiler-bundle": "7.0.*"
     },
     "config": {
         "allow-plugins": {
