Backend: Build - install nelmio cors bundle to resolve cors issue

--- a/backend/.env
+++ b/backend/.env
@@ -18,3 +18,7 @@
 APP_ENV=dev
 APP_SECRET=aa1cf6e7c484a4b489664ba4c86fc45e
 ###< symfony/framework-bundle ###
+
+###> nelmio/cors-bundle ###
+CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
+###< nelmio/cors-bundle ###
