--- a/backend/composer.json
+++ b/backend/composer.json
@@ -7,6 +7,7 @@
         "php": ">=8.2",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "nelmio/cors-bundle": "^2.4",
         "php-cs-fixer/shim": "^3.57",
         "symfony/console": "7.0.*",
         "symfony/dotenv": "7.0.*",
