--- a/backend/config/packages/nelmio_cors.yaml
+++ b/backend/config/packages/nelmio_cors.yaml
@@ -1,10 +1,14 @@
 nelmio_cors:
     defaults:
         origin_regex: true
-        allow_origin: ['%env(CORS_ALLOW_ORIGIN)%']
-        allow_methods: ['GET', 'OPTIONS', 'POST', 'PUT', 'PATCH', 'DELETE']
-        allow_headers: ['Content-Type', 'Authorization']
-        expose_headers: ['Link']
+        allow_origin: ["%env(CORS_ALLOW_ORIGIN)%"]
+        allow_methods: ["GET", "OPTIONS", "POST", "PUT", "PATCH", "DELETE"]
+        allow_headers: ["Content-Type", "Authorization"]
+        expose_headers: ["Link"]
         max_age: 3600
     paths:
-        '^/': null
+        "^/api/":
+            allow_origin: ["http://localhost:5173"]
+            allow_headers: ["X-Custom-Auth"]
+            allow_methods: ["GET"]
+            max_age: 3600
