Backend: Feat - move all links to env file

--- a/backend/config/packages/nelmio_cors.yaml
+++ b/backend/config/packages/nelmio_cors.yaml
@@ -8,7 +8,7 @@ nelmio_cors:
         max_age: 3600
     paths:
         "^/api/":
-            allow_origin: ["http://localhost:5173"]
+            allow_origin: ["%env(CORS_ALLOW_ORIGIN_FRONTEND)%"]
             allow_headers: ["X-Custom-Auth"]
             allow_methods: ["GET"]
             max_age: 3600
