--- a/backend/.env
+++ b/backend/.env
@@ -21,4 +21,5 @@ APP_SECRET=aa1cf6e7c484a4b489664ba4c86fc45e
 
 ###> nelmio/cors-bundle ###
 CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
+CORS_ALLOW_ORIGIN_FRONTEND='http://localhost:5173'
 ###< nelmio/cors-bundle ###
