--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,7 @@
     "axios": "^1.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "run": "^1.5.0"  // what is this pakages?
+    "run": "^1.5.0",
     "react-router-dom": "^6.23.1"
   },
   "devDependencies": {
