--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,8 +13,9 @@
     "axios": "^1.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "run": "^1.5.0",
-    "react-router-dom": "^6.23.1"
+    "react-leaflet": "^4.2.1",
+    "react-router-dom": "^6.23.1",
+    "run": "^1.5.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
