--- a/backend/config/packages/nelmio_cors.yaml
+++ b/backend/config/packages/nelmio_cors.yaml
@@ -1,14 +1,16 @@
 nelmio_cors:
   defaults:
     origin_regex: true
-    allow_origin: ["%env(CORS_ALLOW_ORIGIN)%"]
+    # allow_origin: ["%env(CORS_ALLOW_ORIGIN)%"]
+    allow_origin: ["*"] # this one just for development. use the below line for production build
     allow_methods: ["GET", "OPTIONS", "POST", "PUT", "PATCH", "DELETE"]
     allow_headers: ["Content-Type", "Authorization"]
     expose_headers: ["Link"]
     max_age: 3600
   paths:
     "^/api/":
-      allow_origin: ["%env(CORS_ALLOW_ORIGIN)%"]
+      # allow_origin: ["%env(CORS_ALLOW_ORIGIN_FRONTEND)%"]
+      allow_origin: ["*"] # this one just for development. use the below line for production build
       allow_headers: ["X-Custom-Auth"]
       allow_methods: ["GET"]
       max_age: 3600
