--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,9 @@
   },
   "dependencies": {
     "axios": "^1.7.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "leaflet": "^1.9.4",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.23.1",
     "run": "^1.5.0"
